crates/uitest/fixtures/ty/def/const_generics_enum.snap
---
source: crates/uitest/tests/ty.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty/def/const_generics_enum.fe
---
error[8-0031]: type annotation is needed
   ┌─ const_generics_enum.fe:12:5
   │
12 │     Ptr { addr: 0 }
   │     ^^^^^^^^^^^^^^^
   │     │
   │     type annotation is needed
   │     consider giving `: Ptr<u8, _>` here
